mild fixes for mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,8 +17,8 @@ let title = 'Is Nebraska Great Again?';
 <header>
     <h1 class="liberator">Is <span class="emphasize">Nebraska</span> Great Again?</h1>
         <div class="top-aligned-flex subhead">
-            Upon his hire in 2017, Scott Frost was tasked to&nbsp;
-            <span><a href="https://twitter.com/tsmitty1206/status/730467841820909568?s=21" class="liberator fix-liberator-anchor">Make Nebraska Great Again.</a></span>&nbsp;
+            Upon his hire in 2017, Scott Frost was tasked to 
+            &nbsp;<a href="https://twitter.com/tsmitty1206/status/730467841820909568?s=21" class="liberator fix-liberator-anchor">Make Nebraska Great Again.</a>&nbsp;
             Has he done the job?
         </div>
     </header>
@@ -26,19 +26,18 @@ let title = 'Is Nebraska Great Again?';
     <main>
         <div class="container">
             <!-- <img width="60" height="80" src="/assets/logo.svg" alt="Astro logo"> -->
-            <div>
+            <div class='verdict-container'>
                 <GreatnessVerdict client:visible />
             </div>
-            <div>
+            <div class='schedule-container'>
                 <HuskerSchedule client:visible />
             </div>
         </div>
         
     </main>
 </body>
-<footer class="top-aligned-flex">Inspired by&nbsp;
-<span><a href="https://istexasbackyet.com">Is Texas Back Yet?</a></span>
-&nbsp;Made lazily by&nbsp;
-<span><a href="https://twitter.com/patrickdavlin">Patrick Davlin</a></span>
+<footer class="top-aligned-flex">
+    Inspired by&nbsp;<a href="https://istexasbackyet.com">Is Texas Back Yet?</a>&nbsp;
+    Made lazily by&nbsp;<a href="https://twitter.com/patrickdavlin">Patrick Davlin</a>&nbsp;
 </footer>
 </html>
