--- a/public/style/global.css
+++ b/public/style/global.css
@@ -61,7 +61,6 @@ h1 {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  padding: 2rem;
 }
 
 .liberator {
@@ -79,66 +78,88 @@ h1 {
   padding: 2rem;
 }
 
-.top-aligned-flex {
-  display: flex;
-  align-content: flex-start;
-}
-
-.fix-liberator-anchor {
-  padding-top: 0.25rem;
-}
-
 footer {
+  margin-top: 2rem;
   bottom: 1rem;
-  position: fixed;  
+  font-size: 0.75rem;
 }
 
 a.active {
   color: var(--app-emphasis);
 }
 
-a {
-  color: var(--app-emphasis);
-  text-decoration: none;
-  overflow: hidden;
-  display: inline-block;
-  position: relative;
+@media screen and (min-width: 801px) {
+  .container {
+    padding: 2rem;
+  }
+  .verdict-container {
+    min-width: 50%;
+  }
+  .schedule-container {
+    min-width: 20%;
+  }
+  a {
+    color: var(--app-emphasis);
+    text-decoration: none;
+    overflow: hidden;
+    display: inline-block;
+    position: relative;
+  }
+
+  /* Fade in */
+  a::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0.1em;
+    background-color: var(--app-emphasis);
+    opacity: 0;
+    transition: opacity 300ms, transform 300ms;
+  }
+
+  a:hover::after,
+  a:focus::after {
+    opacity: 1;
+    transform: translate3d(0, 0.2em, 0);
+  }
+
+  a::after {
+    opacity: 1;
+    transform: translate3d(-100%, 0, 0);
+  }
+
+  a:hover::after,
+  a:focus::after {
+    transform: translate3d(0, 0, 0);
+  }
+
+  .top-aligned-flex {
+    display: flex;
+    align-content: flex-start;
+  }
+  
+  .fix-liberator-anchor {
+    padding-top: 0.2rem;
+  }
 }
 
-/* Fade in */
-a::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 0.1em;
-  background-color: var(--app-emphasis);
-  opacity: 0;
-  transition: opacity 300ms, transform 300ms;
-}
-
-a:hover::after,
-a:focus::after {
-  opacity: 1;
-  transform: translate3d(0, 0.2em, 0);
-}
-
-a::after {
-  opacity: 1;
-  transform: translate3d(-100%, 0, 0);
-}
-
-a:hover::after,
-a:focus::after {
-  transform: translate3d(0, 0, 0);
-}
-
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
+  .verdict-container {
+    width: 100%;
+  }
+  .schedule-container {
+    width: 100%;
+  }
+  a {
+    color: var(--app-emphasis);
+    overflow: hidden;
+    display: inline;
+  }
   .container {
     flex-direction: column;
     margin-top: 4rem;
     gap: 2rem;
   }
 }
-
