meta tags for social

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,8 +6,21 @@ let title = 'Is Nebraska Great Again?';
 ---
 <html lang="en">
 <head>
+    <meta name="robots" content="index, follow, max-video-preview:-1, max-snippet:-1, max-image-preview:large">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Is Nebraska Great Again?">
+    <meta property="og:description" content="Upon his hire in 2017, Scott Frost was tasked to Make Nebraska Great Again. Has he done the job?">
+    <meta property="og:url" content="https://www.isnebraskagreatagain.com">
+    <meta property="og:image" content="https://www.isnebraskagreatagain.com/assets/web-preview.jpg">
+    <meta property="og:image:width" content="829">
+    <meta property="og:image:height" content="589">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:creator" content="@PatrickDavlin">
+    <meta name="twitter:site" content="@PatrickDavlin">
+
     <title>{title}</title>
 
         <link rel="icon" type="image/x-icon" href="/favicon.ico" />
