change load time for vue components

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,10 +40,10 @@ let title = 'Is Nebraska Great Again?';
         <div class="container">
             <!-- <img width="60" height="80" src="/assets/logo.svg" alt="Astro logo"> -->
             <div class='verdict-container'>
-                <GreatnessVerdict client:visible />
+                <GreatnessVerdict client:load />
             </div>
             <div class='schedule-container'>
-                <HuskerSchedule client:visible />
+                <HuskerSchedule client:load />
             </div>
         </div>
         
