more twitter meta

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,10 @@ let title = 'Is Nebraska Great Again?';
     <meta property="og:image" content="https://www.isnebraskagreatagain.com/assets/web-preview.jpg">
     <meta property="og:image:width" content="829">
     <meta property="og:image:height" content="589">
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Is Nebraska Great Again?">
+    <meta name="twitter:description" content="Upon his hire in 2017, Scott Frost was tasked to Make Nebraska Great Again. Has he done the job?">
+    <meta name="twitter:image" content="https://www.isnebraskagreatagain.com/assets/web-preview.jpg">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="@PatrickDavlin">
     <meta name="twitter:site" content="@PatrickDavlin">
 
