post load new data

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,6 @@ let title = 'Is Nebraska Great Again?';
 <body>
     <main>
         <div class="container">
-            <!-- <img width="60" height="80" src="/assets/logo.svg" alt="Astro logo"> -->
             <div class='verdict-container'>
                 <GreatnessVerdict client:load />
             </div>
@@ -49,11 +48,11 @@ let title = 'Is Nebraska Great Again?';
                 <HuskerSchedule client:load />
             </div>
         </div>
-        
     </main>
 </body>
 <footer class="top-aligned-flex">
     Inspired by&nbsp;<a href="https://istexasbackyet.com">Is Texas Back Yet?</a>&nbsp;
-    Made lazily by&nbsp;<a href="https://twitter.com/patrickdavlin">Patrick Davlin</a>&nbsp;
+    Made lazily by&nbsp;<a href="https://twitter.com/patrickdavlin">Patrick Davlin</a>.
+    Data from&nbsp;<a href="https://collegefootballdata.com">collegefootballdata.com</a>.
 </footer>
 </html>
