--- a/public/style/global.css
+++ b/public/style/global.css
@@ -147,6 +147,7 @@ a.active {
 
 @media screen and (max-width: 800px) {
   .verdict-container {
+    margin-top: 2em;
     width: 100%;
   }
   .schedule-container {
