MI State Score Update

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,6 @@
 import HuskerSchedule from '../components/HuskerSchedule.vue';
 import GreatnessVerdict from '../components/GreatnessVerdict.vue';
 
-let title = 'Is Nebraska Great Again?';
 ---
 <html lang="en">
 <head>
@@ -24,7 +23,7 @@ let title = 'Is Nebraska Great Again?';
     <meta name="twitter:creator" content="@PatrickDavlin">
     <meta name="twitter:site" content="@PatrickDavlin">
 
-    <title>{title}</title>
+    <title>Is Nebraska Great Again?</title>
 
         <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     
