--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ const winsAndRemainingGames = computeNumberOfWinsAndRemainingGames(gameData);
                     <p>
                     { bowlIneligible(winsAndRemainingGames) ? 
                     "The Huskers won't even make a bowl in 2021! There's always next year, right Scott?"
-                    : "Before that, the Huskers need to achieve the greatness of the Bo Pelini era: at least 9 wins, and 3 losses. That also won't happen this year, but if the Cornhuskers win the rest of their schedule, they will (probably) be bowl eligible in 2021!"}
+                    : "Before that, the Huskers need to achieve the greatness of the Bo Pelini era: at least 9 wins, and 3 losses. Neither of those things will happen this year, but if the Cornhuskers win the rest of their schedule, they will (probably) be bowl eligible in 2021!"}
                     </p>
                 </div>
             </div>
