--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 // Component Imports
-import { bowlIneligible, computeNumberOfWinsAndRemainingGames, dateInPast, fetchScores, formatWinLossString, getGameTimeFromString, getRandomNoMessage } from '../utils/scheduleUtils.js';
+import { bowlIneligible, getSubtitle, computeNumberOfWinsAndRemainingGames, dateInPast, fetchScores, formatWinLossString, getGameTimeFromString, getRandomNoMessage, seasonStarted } from '../utils/scheduleUtils.js';
 
 // Component Script:
 let gameData = await fetchScores();
@@ -48,17 +48,25 @@ const winsAndRemainingGames = computeNumberOfWinsAndRemainingGames(gameData);
                         { winsAndRemainingGames.wins >= 9 ? "oh yeah, I'm thinkin' the skers are back!" : getRandomNoMessage(winsAndRemainingGames) }
                         </div>
                         <h2 class="liberator">
-                        <span class="emphasize">{winsAndRemainingGames.wins}</span> wins in 2021
+                        <span class="emphasize">{getSubtitle(winsAndRemainingGames)}</span>
                         </h2>
                     </div>
                     <p>
-                        To be great again, Nebraska needs to win back-to-back national
-                        championships.
+                        { 
+                            seasonStarted(winsAndRemainingGames.remainingGames) ? 
+                                bowlIneligible(winsAndRemainingGames) ? 
+                                    "The Huskers won't even make a bowl in 2022! There's always next year, right Scott?"
+                                    // : "Neither of those things will happen this year, but if the Cornhuskers win the rest of their schedule, they will (probably) be bowl eligible in 2022!"
+                                    : "Right now we're shooting for the Pelini Number (9)."
+                                : "It's a new year! Scott and his team are ready to win some games in 2022."
+                        }
+                    </p>
+                    <br/>
+                    <p>
+                        To be great again, Nebraska needs to win back-to-back national championships. 
                     </p>
                     <p>
-                    { bowlIneligible(winsAndRemainingGames) ? 
-                    "The Huskers won't even make a bowl in 2021! There's always next year, right Scott?"
-                    : "Before that, the Huskers need to achieve the greatness of the Bo Pelini era: at least 9 wins, and 3 losses. Neither of those things will happen this year, but if the Cornhuskers win the rest of their schedule, they will (probably) be bowl eligible in 2021!"}
+                        Before that, the Huskers need to achieve the greatness of the Bo Pelini era: at least 9 wins, and 3 losses.
                     </p>
                 </div>
             </div>
@@ -86,7 +94,7 @@ const winsAndRemainingGames = computeNumberOfWinsAndRemainingGames(gameData);
 </body>
 <footer class="top-aligned-flex">
     Inspired by&nbsp;<a href="https://istexasbackyet.com">Is Texas Back Yet?</a>&nbsp;
-    Made lazily by&nbsp;<a href="https://twitter.com/patrickdavlin">Patrick Davlin</a>.
+    Made by&nbsp;<a href="https://twitter.com/patrickdavlin">Patrick Davlin</a>.
     Data from&nbsp;<a href="https://collegefootballdata.com">collegefootballdata.com</a>.
 </footer>
 </html>
