--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 // Component Imports
-import { bowlIneligible, getSubtitle, computeNumberOfWinsAndRemainingGames, dateInPast, fetchScores, formatWinLossString, getGameTimeFromString, getRandomNoMessage, seasonStarted } from '../utils/scheduleUtils.js';
+import { bowlIneligible, getSubtitle, computeNumberOfWinsAndRemainingGames, dateInPast, fetchScores, formatWinLossString, getGameTimeFromString, getRandomNoMessage, seasonStarted } from '../utils/scheduleUtils';
 
 // Component Script:
 let gameData = await fetchScores();
