--- a/public/style/global.css
+++ b/public/style/global.css
@@ -15,7 +15,7 @@
 :root {
   font-family: Helvetica, -apple-system, BlinkMacSystemFont, Segoe UI, Arial,
     sans-serif, Apple Color Emoji, Segoe UI Emoji;
-  font-size: 1rem;
+  /* font-size: 1rem; */
   --user-font-scale: 1rem - 16px;
   font-size: clamp(
     0.875rem,
@@ -95,10 +95,10 @@ a.active {
     padding: 3rem 2rem 2rem;
   }
   .verdict-container {
-    min-width: 50%;
+    min-width: 40%;
   }
   .schedule-container {
-    min-width: 20%;
+    min-width: 25%;
   }
   a {
     color: var(--app-emphasis);
